docs/css/style.production.css
/* ... */
.navigation-list__item--active {
  text-decoration: none;
}

.page-footer {
  clear: both;
}

.profile2 {
  max-width: 700px;
  margin: 0 auto;

}
.about {
  list-style-type: none;
  padding: 0 0 0 0;
}

.page-footer {
  clear: both;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  text-align: center;
  padding: 5px 0 5px 0;
  background-color: rgb(1, 1, 1);
}

.page-header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 80px;
  padding:0px 20px 0px 0px;
  margin-right: 20px;
  background-color: rgb(1,1,1);
  font-family: lato, sans-serif;
}
.page-header__item {
  -webkit-box-flex: 0;
      -ms-flex: 0 1 200px;
          flex: 0 1 200px;
}
.page-header__item:last-child {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  text-align: right;
}
.navigation-list {
  list-style-type: none;
}
.navigation-list li {
  display: inline-block;
  margin-left: 15px;
}

table {
  border-collapse: collapse;
  background-color: #ffffff;
}

table, th, td {
  border: 1px solid black;
}
.button {
  /* overwrites browser defaults and resets the border */
  border: none;
  display: inline-block;
  /* takes the font from the outer container */
  font-family: inherit;
  /* styles the button */
  background-color: #d4af37;
  color: #006400;
  text-decoration: none;
  padding: 10px;
  border-radius: 3px;
  /* width of the border, type, color */
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  -webkit-transition: 0.2s opacity;
  -o-transition: 0.2s opacity;
  transition: 0.2s opacity;
  position: center;
}

button:hover,
button:focus,
.button:hover,
.button:focus {
  /* lets the mouse appear as a hand when hovering over the button */
  cursor: pointer;
  /* reduces the opacity of the button to 80% */
  opacity: 0.8;
}


@media all and (min-width: 500px) and (max-width: 750px){
    .texts {
    font-size: 14px;
  }
   .navigation-list {
  list-style-type: none;
  font-size: 14px;
}
}
@media all and (max-width: 500px) {
  

  .texts {
    font-size: 12px;
  }
  .navigation-list {
  list-style-type: none;
  font-size: 12px;
}
}
.container {
  position: relative;
  width: 100%;
}

.image {
  display: block;
  max-width: 100%;
  max-height: 350px;
}

.overlay {
  position: absolute;
  bottom: 100%;
  left: 0;
  right: 0;
  background-color: #d3d3d3;
  overflow: hidden;
  width: 100%;
  height:0;
  -webkit-transition: .5s ease;
  -o-transition: .5s ease;
  transition: .5s ease;
}

.container:hover .overlay {
  bottom: 0;
  height: 100%;
}

.text {
  white-space: nowrap; 
  color: White;
  font-size: 24px;
  font-weight: 700;
  position: absolute;
  overflow: hidden;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}


/* Parallax effect below*/


@import url(https://fonts.googleapis.com/css?family=Montserrat);

html {
  height: 100%;
  overflow: hidden;
}

body { 
  margin:0;
  padding:0;
	perspective: 1px;
	transform-style: preserve-3d;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  font-family: Montserrat;
}

.slide {
  position: relative;
  min-height: 100vh;
  width: 100vw;
  box-sizing: border-box;
  box-shadow: 0 -1px 10px rgba(0, 0, 0, .7);
	transform-style: inherit;
}

.img {
  position: absolute;
  top: 43%;
  left: 44%;
  width: 43%;
  transform: translateZ(.25px) scale(.75) translateX(-94%) translateY(-100%) rotate(2deg);
  padding: 10px;
  border-radius: 5px;
  background: rgba(240,230,220, .7);
  box-shadow: 0 0 8px rgba(0, 0, 0, .7);
}

.img:last-of-type {
  transform: translateZ(.4px) scale(.6) translateX(-104%) translateY(-40%) rotate(-5deg);
}

.slide:before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  box-shadow: 0 0 8px 1px rgba(0, 0, 0, .7);
  z-index: -1;
}

.slide:nth-child(2n) .title {
  margin-left: 0;
  margin-right: auto;
}

.slide:nth-child(2n+1) .title {
  margin-left: auto;
  margin-right: 0;
}

.slide, .slide:before {
  background: 50% 50% / cover;  
}

.header {
  text-align: center;
  color: rgb(88, 88, 88);
  text-shadow: 0 2px 2px #000;
}

#title {
  background: rgb(1, 1, 1);
  z-index:2;
}

#title h1 {
 transform: translateZ(.25px) scale(.75);
 transform-origin: 50% 100%;

}

#slide1:before {
  background: rgb(0, 0, 0);
  transform: translateZ(-1px) scale(2);
}

#slide2 {
  background-image: url("../img/vue2.png");
  z-index:2;
}
.floater {
  position: absolute;
    color: rgb(255, 255, 255);
    top: 42%;
    left: 11%;
    width: 320px;
    height: 240px;
    transform: translateZ(-0.75px) scale(0.75) translateX(-35%) translateY(-181%) rotate(0deg);
    padding: 10px;
}

@media (max-width: 2000px) {
  .floater {
    left: -9%;
    top: 40%
}
  }
@media (max-width: 500px) {
    .floater {
      left: -7%;
      top: 56%;
  }
    }

    .floater-otro {
      position: absolute;
        top: 42%;
        left: 11%;
        width: 320px;
        height: 240px;
        transform: translateZ(-0.75px) scale(0.75) translateX(-35%) translateY(-181%) rotate(0deg);
        padding: 10px;
    }
    
    @media (max-width: 2000px) {
      .floater-otro {
        left: -9%;
        top: 41.5%
    }
      }

      @media (max-width: 1300px) {
        .floater-otro {
          left: -9%;
          top: 56.5%
      }
        }
    @media (max-width: 500px) {
        .floater-otro {
          left: -7%;
          top: 71%;
      }
        }

.floater-two {
  position: absolute;
    top: 68%;
    left: 57%;
    width: 320px;
    height: 240px;
    transform: translateZ(0.25px) scale(0.75) translateX(-35%) translateY(-181%) rotate(0deg);
    padding: 10px;
}

@media (max-width: 500px) {
  .floater-two {
    left: 60%;
    top: 75%;
}
  }
/* ... */

